tests/baselines/reference/overloadOnConstAsTypeAnnotation.errors.txt
tests/cases/compiler/overloadOnConstAsTypeAnnotation.ts(2,37): error TS1005: ';' expected.


==== tests/cases/compiler/overloadOnConstAsTypeAnnotation.ts (1 errors) ====
    
    var f: (x: 'hi') => number = ('hi') => { return 1; };
                                        ~~
!!! error TS1005: ';' expected.